After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729968 - GLib-GIO-CRITICAL **: g_file_enumerator_next_file: assertion 'G_IS_FILE_ENUMERATOR (enumerator)' failed
GLib-GIO-CRITICAL **: g_file_enumerator_next_file: assertion 'G_IS_FILE_ENUME...
Status: RESOLVED FIXED
Product: tracker
Classification: Core
Component: General
1.0.x
Other Linux
: Normal normal
: ---
Assigned To: tracker-general
Depends on:
Blocks:
 
 
Reported: 2014-05-11 20:09 UTC by Paul Menzel
Modified: 2014-05-12 11:04 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Paul Menzel 2014-05-11 20:09:28 UTC
Using Debian Sid/unstable with the package `tracker` 1.0.1-2, the messages below are shown on the terminal.

	$ tracker-control --version

	Tracker 1.0.1

	This program is free software and comes without any warranty.
	It is licensed under version 2 or later of the General Public License which can be viewed at:

	  http://www.gnu.org/licenses/gpl.txt

	$ tracker-control -S

	(tracker-control:21645): GLib-GIO-CRITICAL **: g_file_enumerator_next_file: assertion 'G_IS_FILE_ENUMERATOR (enumerator)' failed

	(tracker-control:21645): GLib-GObject-CRITICAL **: g_object_unref: assertion 'G_IS_OBJECT (object)' failed
	Speichern:
	11 Mai 2014, 22:06:26:  ✗     Store           - Nicht verfügbar

	Indizierer:

	$ echo $?
	0
	$ tracker-control -s
	Indizierung wird gestartet …

	(tracker-control:21647): GLib-GIO-CRITICAL **: g_file_enumerator_next_file: assertion 'G_IS_FILE_ENUMERATOR (enumerator)' failed

	(tracker-control:21647): GLib-GObject-CRITICAL **: g_object_unref: assertion 'G_IS_OBJECT (object)' failed
	$ echo $?
	0
	$ tracker-control -S

	(tracker-control:21700): GLib-GIO-CRITICAL **: g_file_enumerator_next_file: assertion 'G_IS_FILE_ENUMERATOR (enumerator)' failed

	(tracker-control:21700): GLib-GObject-CRITICAL **: g_object_unref: assertion 'G_IS_OBJECT (object)' failed
	Speichern:
	11 Mai 2014, 22:08:59:  ✗     Store           - Nicht verfügbar

	Indizierer:
Comment 1 Paul Menzel 2014-05-11 20:19:02 UTC
Here is the backtrace.

(gdb) run -S
Starting program: /usr/bin/tracker-control -S
warning: Could not load shared library symbols for linux-vdso.so.1.
Do you need "set solib-search-path" or "set sysroot"?
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[New Thread 0x7ffff4308700 (LWP 21852)]

(tracker-control:21848): GLib-GIO-CRITICAL **: g_file_enumerator_next_file: assertion 'G_IS_FILE_ENUMERATOR (enumerator)' failed

Program received signal SIGTRAP, Trace/breakpoint trap.
g_logv (log_domain=0x7ffff7280558 "GLib-GIO", log_level=G_LOG_LEVEL_CRITICAL, format=<optimized out>, args=args@entry=0x7fffffffdff8)
    at /tmp/buildd/glib2.0-2.40.0/./glib/gmessages.c:1038
1038	/tmp/buildd/glib2.0-2.40.0/./glib/gmessages.c: Datei oder Verzeichnis nicht gefunden.

(gdb) t a a bt f

Thread 1 (Thread 0x7ffff7fc5840 (LWP 21848))

  • #0 g_logv
    at /tmp/buildd/glib2.0-2.40.0/./glib/gmessages.c line 1038
  • #1 g_log
    at /tmp/buildd/glib2.0-2.40.0/./glib/gmessages.c line 1071
  • #2 g_return_if_fail_warning
  • #3 g_file_enumerator_next_file
    at /tmp/buildd/glib2.0-2.40.0/./gio/gfileenumerator.c line 205
  • #4 directory_foreach
    at tracker-miner-manager.c line 752
  • #5 initialize_miners_data
    at tracker-miner-manager.c line 781
  • #6 miner_manager_initable_init
    at tracker-miner-manager.c line 413
  • #7 g_initable_new_valist
    at /tmp/buildd/glib2.0-2.40.0/./gio/ginitable.c line 228
  • #8 g_initable_new
    at /tmp/buildd/glib2.0-2.40.0/./gio/ginitable.c line 146
  • #9 tracker_miner_manager_new_full
    at tracker-miner-manager.c line 600
  • #10 tracker_control_status_run
    at tracker-control-status.c line 539
  • #11 main
    at tracker-control.c line 116

Comment 2 Martyn Russell 2014-05-12 11:04:06 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.

commit 6814d07e3cdc271017488137c02074e7792596eb
Author: Martyn Russell <martyn@lanedo.com>
Date:   Mon May 12 12:00:39 2014 +0100

    libtracker-control: Don't error with g_file_enumerator_next_file()
    
    This has been happening lately for some people and it seems to be when
    $prefix/share/tracker/miners/ doesn't exist. This is a broken install to be
    fair, but Tracker should handle it more gracefully.
    
    Added a NULL check on enumerator returned from g_file_enumerate_children().
    
    https://bugzilla.gnome.org/show_bug.cgi?id=729968