libtracker-control: Don't error with g_file_enumerator_next_file()

This has been happening lately for some people and it seems to be when
$prefix/share/tracker/miners/ doesn't exist. This is a broken install to be
fair, but Tracker should handle it more gracefully.

Added a NULL check on enumerator returned from g_file_enumerate_children().

https://bugzilla.gnome.org/show_bug.cgi?id=729968