src/libtracker-control/tracker-miner-manager.c
@@ -746,8 +746,15 @@ directory_foreach (GFile    *file,
 	GFileInfo *info;
 	GFile *child;
 
-	enumerator = g_file_enumerate_children (file, G_FILE_ATTRIBUTE_STANDARD_NAME,
-	                                        G_FILE_QUERY_INFO_NONE, NULL, NULL);
+	enumerator = g_file_enumerate_children (file,
+	                                        G_FILE_ATTRIBUTE_STANDARD_NAME,
+	                                        G_FILE_QUERY_INFO_NONE,
+	                                        NULL,
+	                                        NULL);
+
+	if (!enumerator) {
+		return;
+	}
 
 	while ((info = g_file_enumerator_next_file (enumerator, NULL, NULL)) != NULL) {
 
